<?xml version="1.0"?>
<package>
  <name>lidar_odom_py</name>
  <version>2.0.0</version>
  <description>LiDAR Odometry ROS Node</description>
  <maintainer email="eparham@umich.edu">eparham</maintainer>
  <license>UofM</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>